--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,28 @@
     padding: 0px;
     font-size: 1.1rem;
 }
+#header {
+    display: flex;
+    justify-content: center;
+}
 
+#header p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    margin: 5px;
+}
+#startGameScreen{
+    display: grid;
+}
+
+#playGameScreen{
+    display: none;
+}
+
+#endGameScreen{
+    display: none;
+}
 
 #gameSpace{
     display: flex;
