--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,19 @@
+body{
+    background-color: rgb(230, 230, 240);
+}
+
 *{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     box-sizing: border-box;
     padding: 0px;
     font-size: 1.1rem;
+
 }
 #header {
     display: flex;
     justify-content: center;
+    height: 12vh;
 }
 
 #header p {
@@ -18,11 +24,11 @@
 }
 #startGameScreen{
     display: grid;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 6fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
     padding: 5px;
-
+    height: 88vh;
 }
 
 #startGameScreen p{
@@ -38,22 +44,60 @@
     padding-left: 2vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     font-weight: bold;
 }
+#difficultyStart *{
+    font-weight: normal;
+    font-size: 1.2rm;
+}
 
 #difficultyStart button{
-    margin-top: 10vh;
-    padding: 5px 15px;
+    margin-top: 20vh;
+    padding: 5px 45px;
     font-weight: bold;
 }
 
-#difficultySelect label{
-    display: block;
-    margin-bottom: 5px;
+#difficultySelect p{
+    margin: 0px 0px 20px 0px;
 }
 
+#difficultySelect label{
+    margin: 0.5em;
+}
+.radioLabel{
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.5em;
+    color: black;
+}
+
+input[type="radio"]{
+    appearance: none;
+    background-color: #fff;
+    font: inherit;
+
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+}
+
+
+input[type="radio"]::before{
+    content: "";
+    border-radius: 50%;
+    color: rgb(50,50,50);
+    width: 1em;
+    height: 1em;
+    border: 0.15em solid rgb(50,50,50);
+    background-color: rgb(230, 230, 240);
+}
+
+input[type="radio"]:checked::before{
+    background-color: rgb(50,50,50);
+
+}
 
 #playGameScreen{
     display: none;
