--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ body{
 #startGameScreen{
     display: grid;
     grid-template-rows: 6fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 3fr 3fr 1.5fr;
     gap: 10px;
     padding: 5px;
     height: 88vh;
@@ -45,8 +45,10 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     font-weight: bold;
+    min-height: 308px;
+    max-height: min(50vw, 100%);
 }
 #difficultyStart *{
     font-weight: normal;
@@ -54,7 +56,7 @@ body{
 }
 
 #difficultyStart button{
-    margin-top: 20vh;
+    margin-top: min(10vh, 10vw);
     padding: 5px 45px;
     font-weight: bold;
 }
@@ -117,10 +119,24 @@ input[type="radio"]:checked::before{
 }
 .gameBoard {
     aspect-ratio: 1/1;
-    min-width: 308px;
-    max-width: 100%;
+    min-height: 308px;
+    max-height: min(50vw, 100%);
     background-color: black;
     border: 4px solid black;
     display: grid;
+    gap: 1px;
+}
+
+
+#shipSelect{
+    display: grid;
+    min-height: 308px;
+    max-height: min(50vw, 100%);
+}
+.ship{
+    display: grid;
+    background-color: black;
+    min-height: 32px;
+    border: 1px solid black;
     gap: 1px;
 }
